--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/ameerthehacker/webpack-starter-pack#readme",
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
     "normalize.css": "^8.0.0",
     "snabbdom": "^0.7.4"
   },
